kubernetes/platform/grafana/app/components/httproute/security-policy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: longhorn-dashboard
spec:
  targetRefs:
    - name: longhorn-httproute
  oidc:
    provider:
      issuer: "https://sso.${CLUSTER_DOMAIN}/realms/picluster"
    clientIDRef:
      name: oauth2-external-secret
    clientSecret:
      name: oauth2-external-secret
    redirectURL: "https://longhorn.${CLUSTER_DOMAIN}/oauth2/callback"
    logoutPath: "/longhorn/logout"
